# fds-input-parser

./: LICENSE  README.md  fds-input-parser.cabal  stack.yaml
src/Text/: FDSInputParser.hs
src/Text/FDSInputParser/: Spec.hs
