name:                fds-input-parser
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/JakeOShannessy/fds-input-parser#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Jake O'Shannessy
maintainer:          joshannessy@gmail.com
copyright:           2018 Jake O'Shannessy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.FDSInputParser
    , Text.FDSInputParser.Spec
  build-depends:       base >= 4.7 && < 5
    , containers
    , namelist-parser >= 0.2.1
    , parsec
    , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JakeOShannessy/fds-input-parser
